refactor messages.properties, adapt entity and test